# brownfield-cartographer

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  RECONNAISSANCE.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: index.html
src/: __init__.py  cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_data_flow.py  sql_lineage.py  token_budget.py  tree_sitter_analyzer.py
src/brownfield_cartographer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/graph/: knowledge_graph.py  lineage_graph.py
src/models/: schemas.py
src/utils/: embeddings.py  git_utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_hydrologist.py  test_surveyor.py
